<resources>
    <string name="app_name">adrian_fernandez_rodriguez_PMDM_Tarea1</string>
    <string name="name_activity_login">Nombre</string>
    <string name="pwd_activity_login">Contraseña</string>

    <string name="btnLogin_activity_login">Iniciar sesión</string>
    <string name="btnModify_activity_login">Modificar credenciales</string>

    <string name="welcome_activity_login_correcto">Bienvenido:</string>
    <string name="btnAlarma_activity_login_correcto">Poner alarma</string>

    <string name="name_alar_activity_alarma">Nombre: </string>
    <string name="hour_activity_alarma">Hora: </string>
    <string name="min_activity_alarma">Minutos: </string>
    <string name="btnCrearAlarma_activity_alarma">Crear alarma</string>
    
    <string name="newName_activity_modificar_credenciales">Nuevo nombre de usuario:</string>
    <string name="newPwd_activity_modificar_credenciales">Nuevo contraseña:</string>
    <string name="btnGuardar_activity_modificar_credenciales">Guardar cambios</string>
</resources>
