<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Alarma">

    <TableLayout
        android:layout_width="350dp"
        android:layout_height="232dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewNombreAlar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_alar_activity_alarma"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextNombreAlar"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_activity_alarma"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_activity_alarma"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="bottom|center_horizontal">

            <Button
                android:id="@+id/btnCrearAlar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCrearAlarma_activity_alarma" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>